--- a/restaurant-app-server/src/package.json
+++ b/restaurant-app-server/src/package.json
@@ -1,11 +1,14 @@
 {
   "name": "restaurant-server",
   "version": "1.0.0",
+  "author": "Mikhail Frolov",
+  "license": "MIT",
   "description": "Сервер для ресторана на Express и Sequelize",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "dbr": "yarn sequelize db:drop && yarn sequelize db:create && yarn sequelize db:migrate && yarn sequelize db:seed:all"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -14,12 +17,13 @@
     "hbs": "^4.1.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
   },
   "engines": {
-    "node": "14.17.3"
+    "node": "14.21.3"
   }
 }
